  server port, stream id and direction of the long-lived stream that we start capturing packets after it is established.

* Mesh Connex (MCX) support in existing 802.11 packets.

* Capture Options dialog contains same configuration icon as Welcome Screen. It is possible to configure interface there.

// === Removed Features and Support

// === Removed Dissectors

=== New File Format Decoding Support

[commaize]
--
--

=== New Protocol Support

// Add one protocol per line between the -- delimiters in the format
// “Full protocol name (Abbreviation)”
// git log --oneline --diff-filter=A --stat v3.7.0rc0.. epan/dissectors plugins
[commaize]
--
Host IP Configuration Protocol (HICP)
Secure Host IP Configuration Protocol (SHICP)
Mesh Connex (MCX)
FiveCo's Legacy Register Access Protocol (5co-legacy)
--

=== Updated Protocol Support

Too many protocols have been updated to list here.

=== New and Updated Capture File Support

// There is no new or updated capture file support in this release.
// Add one file type per line between the -- delimiters.
[commaize]
--
--

// === New and Updated Capture Interfaces support

//_Non-empty section placeholder._

=== Major API Changes

* proto.h: The field display types "STR_ASCII" and "STR_UNICODE" were removed. Use "BASE_NONE" instead.

== Getting Wireshark

Wireshark source code and installation packages are available from
https://www.wireshark.org/download.html.

=== Vendor-supplied Packages

Most Linux and Unix vendors supply their own Wireshark packages.
You can usually install or upgrade Wireshark using the package management system specific to that platform.
A list of third-party packages can be found on the
https://www.wireshark.org/download.html[download page]
on the Wireshark web site.

== File Locations

Wireshark and TShark look in several different locations for preference files, plugins, SNMP MIBS, and RADIUS dictionaries.
These locations vary from platform to platform.