@@ -334,6 +334,7 @@ free_pref(gpointer data, gpointer user_data _U_)
     case PREF_SAVE_FILENAME:
     case PREF_OPEN_FILENAME:
     case PREF_DIRNAME:
+    case PREF_PASSWORD:
         free_string_like_preference(pref);
         break;
     case PREF_RANGE:
@@ -1906,6 +1907,21 @@ void prefs_register_decode_as_preference(module_t *module, const char *name,
     preference->info.base = 10;
 }
 
+/*
+ * Register a preference with password value.
+ */
+void
+prefs_register_password_preference(module_t *module, const char *name,
+                                 const char *title, const char *description,
+                                 const char **var)
+{
+DIAG_OFF(cast-qual)
+    register_string_like_preference(module, name, title, description,
+                                    (char **)var, PREF_PASSWORD, NULL, FALSE);
+DIAG_ON(cast-qual)
+}
+
+
 gboolean prefs_add_decode_as_value(pref_t *pref, guint value, gboolean replace)
 {
     switch(pref->type)
@@ -2026,6 +2042,7 @@ pref_stash(pref_t *pref, gpointer unused _U_)
     case PREF_SAVE_FILENAME:
     case PREF_OPEN_FILENAME:
     case PREF_DIRNAME:
+    case PREF_PASSWORD:
         g_free(pref->stashed_val.string);
         pref->stashed_val.string = g_strdup(*pref->varp.string);
         break;
@@ -2111,6 +2128,7 @@ pref_unstash(pref_t *pref, gpointer unstash_data_p)
     case PREF_SAVE_FILENAME:
     case PREF_OPEN_FILENAME:
     case PREF_DIRNAME:
+    case PREF_PASSWORD:
         if (strcmp(*pref->varp.string, pref->stashed_val.string) != 0) {
             unstash_data->module->prefs_changed_flags |= prefs_get_effect_flags(pref);
             g_free(*pref->varp.string);
@@ -2217,6 +2235,7 @@ reset_stashed_pref(pref_t *pref) {
     case PREF_SAVE_FILENAME:
     case PREF_OPEN_FILENAME:
     case PREF_DIRNAME:
+    case PREF_PASSWORD:
         g_free(pref->stashed_val.string);
         pref->stashed_val.string = g_strdup(pref->default_val.string);
         break;
@@ -2261,6 +2280,7 @@ pref_clean_stash(pref_t *pref, gpointer unused _U_)
     case PREF_SAVE_FILENAME:
     case PREF_OPEN_FILENAME:
     case PREF_DIRNAME:
+    case PREF_PASSWORD:
         if (pref->stashed_val.string != NULL) {
             g_free(pref->stashed_val.string);
             pref->stashed_val.string = NULL;
@@ -3743,7 +3763,7 @@ prefs_get_string_list(const gchar *str)
                 g_free(slstr);
             break;
         }
-        if (cur_c == '"' && ! backslash) {
+        if (cur_c == '"' && !backslash) {
             switch (state) {
             case PRE_STRING:
                 /* We hadn't yet started processing a string; this starts the
@@ -3763,7 +3783,7 @@ prefs_get_string_list(const gchar *str)
             default:
                 break;
             }
-        } else if (cur_c == '\\' && ! backslash) {
+        } else if (cur_c == '\\' && !backslash) {
             /* We saw a backslash, and the previous character wasn't a
                backslash; escape the next character.
 
@@ -3771,7 +3791,7 @@ prefs_get_string_list(const gchar *str)
             backslash = TRUE;
             if (state == PRE_STRING)
                 state = NOT_IN_QUOT;
-        } else if (cur_c == ',' && state != IN_QUOT && ! backslash) {
+        } else if (cur_c == ',' && state != IN_QUOT && !backslash) {
             /* We saw a comma, and we're not in the middle of a quoted string
                and it wasn't preceded by a backslash; it's the end of
                the string we were working on...  */
@@ -3966,7 +3986,7 @@ parse_column_format(fmt_data *cfmt, const char *fmt)
         strncmp(fmt, cust_format, cust_format_len) == 0) {
         /* Yes. */
         col_fmt = COL_CUSTOM;
-        cust_format_info = g_strsplit(&fmt[cust_format_len+1],":",3); /* add 1 for ':' */
+        cust_format_info = g_strsplit(&fmt[cust_format_len+1], ":", 3); /* add 1 for ':' */
         col_custom_fields = g_strdup(cust_format_info[0]);
         if (col_custom_fields && cust_format_info[1]) {
             col_custom_occurrence = strtol(cust_format_info[1], &p, 10);
@@ -4255,6 +4275,7 @@ reset_pref(pref_t *pref)
     case PREF_SAVE_FILENAME:
     case PREF_OPEN_FILENAME:
     case PREF_DIRNAME:
+    case PREF_PASSWORD:
         reset_string_like_preference(pref);
         break;
 
@@ -4774,6 +4795,12 @@ guint prefs_get_uint_value(const char *module_name, const char* pref_name)
     return prefs_get_uint_value_real(prefs_find_preference(prefs_find_module(module_name), pref_name), pref_current);
 }
 
+char* prefs_get_password_value(pref_t *pref, pref_source_t source)
+{
+    return prefs_get_string_value(pref, source);
+}
+
+
 unsigned int prefs_set_uint_value(pref_t *pref, guint value, pref_source_t source)
 {
     unsigned int changed = 0;
@@ -4804,6 +4831,16 @@ unsigned int prefs_set_uint_value(pref_t *pref, guint value, pref_source_t sourc
 
     return changed;
 }
+
+/*
+ * For use by UI code that sets preferences.
+ */
+unsigned int
+prefs_set_password_value(pref_t *pref, const char* value, pref_source_t source)
+{
+    return prefs_set_string_value(pref, value, source);
+}
+
 
 guint prefs_get_uint_base(pref_t *pref)
 {
@@ -5940,6 +5977,11 @@ set_pref(gchar *pref_name, const gchar *value, void *private_data _U_,
             containing_module->prefs_changed_flags |= prefs_set_string_value(pref, value, pref_current);
             break;
 
+        case PREF_PASSWORD:
+            /* Read value is everytime empty */
+            containing_module->prefs_changed_flags |= prefs_set_string_value(pref, "", pref_current);
+            break;
+
         case PREF_RANGE:
         {
             if (!prefs_set_range_value_work(pref, value, return_range_errors,
@@ -6124,6 +6166,10 @@ prefs_pref_type_name(pref_t *pref)
     case PREF_UAT:
         type_name = "UAT";
         break;
+
+    case PREF_PASSWORD:
+        type_name = "Password";
+        break;
     }
     return type_name;
 }
@@ -6270,6 +6316,10 @@ prefs_pref_type_description(pref_t *pref)
         type_desc = "Configuration data stored in its own file";
         break;
 
+    case PREF_PASSWORD:
+        type_desc = "Password (never stored on disk)";
+        break;
+
     default:
         break;
     }
@@ -6315,6 +6365,7 @@ prefs_pref_is_default(pref_t *pref)
     case PREF_SAVE_FILENAME:
     case PREF_OPEN_FILENAME:
     case PREF_DIRNAME:
+    case PREF_PASSWORD:
         if (!(g_strcmp0(pref->default_val.string, *pref->varp.string)))
             return TRUE;
         break;
@@ -6469,6 +6520,9 @@ prefs_pref_to_str(pref_t *pref, pref_source_t source) {
         break;
     }
 
+    case PREF_PASSWORD:
+        return g_strdup(*(const char **) valp);
+
     default:
         break;
     }
@@ -6524,14 +6578,15 @@ write_pref(gpointer data, gpointer user_data)
         char *type_desc, *pref_text;
         const char * def_prefix = prefs_pref_is_default(pref) ? "#" : "";
 
-        if (pref->type == PREF_CUSTOM) fprintf(arg->pf, "\n# %s", pref->custom_cbs.type_name_cb());
+        if (pref->type == PREF_CUSTOM)
+            fprintf(arg->pf, "\n# %s", pref->custom_cbs.type_name_cb());
         fprintf(arg->pf, "\n");
         if (pref->description &&
                 (g_ascii_strncasecmp(pref->description,"", 2) != 0)) {
             if (pref->type != PREF_CUSTOM) {
                 /* We get duplicate lines otherwise. */
 
-                desc_lines = g_strsplit(pref->description,"\n",0);
+                desc_lines = g_strsplit(pref->description, "\n", 0);
                 for (i = 0; desc_lines[i] != NULL; ++i) {
                     fprintf(arg->pf, "# %s\n", desc_lines[i]);
                 }
@@ -6542,7 +6597,7 @@ write_pref(gpointer data, gpointer user_data)
         }
 
         type_desc = prefs_pref_type_description(pref);
-        desc_lines = g_strsplit(type_desc,"\n",0);
+        desc_lines = g_strsplit(type_desc, "\n", 0);
         for (i = 0; desc_lines[i] != NULL; ++i) {
             fprintf(arg->pf, "# %s\n", desc_lines[i]);
         }
@@ -6551,12 +6606,19 @@ write_pref(gpointer data, gpointer user_data)
 
         pref_text = prefs_pref_to_str(pref, pref_current);
         fprintf(arg->pf, "%s%s.%s: ", def_prefix, name_prefix, pref->name);
-        desc_lines = g_strsplit(pref_text,"\n",0);
-        for (i = 0; desc_lines[i] != NULL; ++i) {
-            fprintf(arg->pf, "%s%s\n", i == 0 ? "" : def_prefix, desc_lines[i]);
+        if (pref->type != PREF_PASSWORD)
+        {
+            desc_lines = g_strsplit(pref_text, "\n", 0);
+            for (i = 0; desc_lines[i] != NULL; ++i) {
+                fprintf(arg->pf, "%s%s\n", i == 0 ? "" : def_prefix, desc_lines[i]);
+            }
+            if (i == 0)
+                fprintf(arg->pf, "\n");
+            g_strfreev(desc_lines);
+        } else {
+            /* We never store password value */
+            fprintf(arg->pf, "\n");
         }
-        if (i == 0) fprintf(arg->pf, "\n");
-        g_strfreev(desc_lines);
         g_free(pref_text);
     }
 
