@@ -299,6 +299,13 @@ my %APIs = (
 
 my @apiGroups = qw(prohibited deprecated soft-deprecated);
 
+# Defines array of pairs function/variable which are excluded
+# from prefs_register_*_preference checks
+my @excludePrefsCheck = (
+         [ qw(prefs_register_password_preference), '(const char **)arg->pref_valptr' ],
+         [ qw(prefs_register_string_preference), '(const char **)arg->pref_valptr' ],
+);
+
 
 # Given a ref to a hash containing "functions" and "functions_count" entries:
 # Determine if any item of the list of APIs contained in the array referenced by "functions"
@@ -869,6 +876,7 @@ sub check_pref_var_dupes($$)
         my @dupes;
         my %count;
         while ($filecontents =~ /prefs_register_(\w+?)_preference/gs) {
+                my ($func) = "prefs_register_$1_preference";
                 my ($args) = extract_bracketed(substr($filecontents, $+[0]), '()');
                 $args = substr($args, 1, -1); # strip parens
 
@@ -876,7 +884,17 @@ sub check_pref_var_dupes($$)
                 next if exists $prefs_register_var_pos{$1} and not defined $pos;
                 $pos //= -1;
                 my $var = (split /\s*,\s*(?![^(]*\))/, $args)[$pos]; # only commas outside parens
-                push @dupes, $var if $count{$var}++ == 1;
+
+                my $ignore = 0;
+                for my $row (@excludePrefsCheck) {
+                        my ($rfunc, $rvar) = @$row;
+                        if (($rfunc eq $func) && ($rvar eq $var)) {
+                                $ignore = 1
+                        }
+                }
+                if (!$ignore) {
+                        push @dupes, $var if $count{$var}++ == 1;
+                }
         }
 
         if (@dupes) {
